# ReelVault

./: .cursorrules  .gitignore  DEVELOPER_GUIDE.md  README.md  create_epic3_issues.py  create_epic3_issues_backup.py  index.html  jest.config.cjs  package-lock.json  package.json  phase4-progress-report.md  vite.config.ts
.cursor/rules/: github-flow.mdc  reelvault-project.mdc
coverage/: coverage-final.json  index.html
coverage/ReelVault/: index.html  jest.config.cjs.html  vite.config.ts.html
docs/: README.md
docs/api/: tauri-command-api.md
docs/features/: RESTORE_FEATURE_IMPLEMENTATION.md
docs/implementation/: CSS_DESIGN_SYSTEM.md  LIFECYCLE_MONITORING_IMPLEMENTATION.md  UPLOAD_DOWNLOAD_FEATURE_LIMITS.md
docs/project-management/: IMPLEMENTATION_PLAN.md  PROJECT_SETUP_SUMMARY.md  README.md  phase1-issue-hierarchy.md  project-plan.csv  tauri-migration-results.md
docs/technical-design/: css統合.md  issue-13-logging-error-handling.md
docs/testing/: MANUAL_TEST_GUIDE.md
docs/user/: MANUAL.md
scripts/setup/: README.md  add-remaining-tasks.py  add-tasks-to-project.py  create-labels.py
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  tarpaulin-report.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs
src-tauri/src/commands/: aws_auth.rs  aws_operations.rs  config.rs  config_management.rs  file_operations.rs  lifecycle.rs  metadata.rs  state_management.rs  upload_system.rs
src-tauri/src/internal/: error.rs  mod.rs
src/__tests__/: integration.test.tsx
src/components/: AuthManager.tsx  AwsAuthSetup.css  AwsAuthSetup.tsx  ConfigManager.css  ConfigManager.tsx  RestoreManager.css  RestoreManager.tsx  Sidebar.tsx  StatusManager.css  StatusManager.tsx  UploadManager.css  UploadManager.tsx
src/constants/: aws-regions.ts
src/services/: fileWatchService.ts  metadataService.ts  restoreService.ts  tauriCommands.ts  uploadService.ts
src/styles/: common.css
(+43 files in other folders)
