[package]
name = "reel_vault"
version = "0.1.0"
description = "映像制作者向け長期アーカイブストレージ補助ツール"
authors = ["kzkski <kzkski@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/CIVICTECH-TV/ReelVault"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"

# 新規追加の依存関係
dirs = "5.0"           # 設定ディレクトリパス取得用
uuid = { version = "1.0", features = ["v4"] }  # UUID生成用
chrono = { version = "0.4", features = ["serde"] }  # 日時処理用

# AWS SDK for Rust
aws-config = "1.1"
aws-sdk-s3 = { version = "1.15", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.15"    # AWS STS (Security Token Service)
aws-credential-types = "1.1"  # AWS認証情報タイプ
tokio = { version = "1.0", features = ["full"] }

# 暗号化・セキュリティ
ring = "0.17"           # 暗号化ライブラリ
base64 = "0.22"         # Base64エンコーディング
keyring = "2.3"         # OS キーチェーン統合（macOS Keychain等）
futures = "0.3.31"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"  # macOS Security Framework for Touch ID/Face ID
core-foundation = "0.9"      # Core Foundation bindings for macOS

# ファイル監視・非同期処理
notify = "6.0"          # ファイルシステム監視
crossbeam-channel = "0.5"  # 非同期チャンネル通信
regex = "1.10"          # 正規表現パターンマッチング
lazy_static = "1.4"     # グローバル静的変数管理

# メタデータ管理・データベース
rusqlite = { version = "0.30", features = ["bundled"] }  # SQLiteデータベース
sha2 = "0.10"           # ファイルハッシュ計算
ffprobe = "0.4"         # 動画メタデータ抽出

[dev-dependencies]
tempfile = "3.8"        # テスト用一時ファイル
